# libadblock

./: .gitmodules  CMakeLists.txt  README.md  adblock.cpp  adblock.hpp  api.cpp  api.h  context.hpp  domain_data_base.cpp  element_hide_rule_base.cpp  element_hide_rule_base.hpp  file.hpp  filter_rule_base.cpp  filter_rule_base.hpp  filter_rule_group.cpp  filter_rule_group.hpp  filter_set.cpp  filter_set.hpp  main.cpp  meson.build  option.cpp  option.hpp  prefix_map.hpp  prefix_map.tcc  stable.hpp  subscription.cpp  subscription.hpp  suffix_map.hpp  suffix_map.tcc  trie  type.hpp  uri.cpp  uri.hpp
benchmark/: CMakeLists.txt  memory_usage.cpp
benchmark/data/: easylist.txt
lib/uri/: CMakeLists.txt  parser.cpp
option/: CMakeLists.txt  collapse_option.hpp  document_option.cpp  document_option.hpp  domain_data_base.cpp  domain_option.cpp  elem_hide_option.cpp  elem_hide_option.hpp  font_option.hpp  generic_block_option.cpp  generic_block_option.hpp  generic_hide_option.hpp  image_option.cpp  invertible_option.hpp  object_option.cpp  object_option.hpp  other_option.cpp  ping_option.cpp  restriction_option.hpp  style_sheet_option.cpp  style_sheet_option.hpp  type_option.hpp  web_rtc_option.cpp  web_rtc_option.hpp  web_socket_option.cpp  web_socket_option.hpp  white_list_option.hpp  xml_http_request_option.cpp
src/: CMakeLists.txt  adblock.cpp  adblock.hpp  api.cpp  api.h  element_hide_rule_base.cpp  element_hide_rule_base.hpp  file.cpp  filter_rule_base.cpp  filter_rule_base.hpp  filter_rule_group.cpp  filter_rule_group.hpp  filter_set.cpp  filter_set.hpp  main.cpp  meson.build  namespace.hpp  option.hpp  stable.hpp
src/api/: CMakeLists.txt  c_api.cpp  database.cpp  error.hpp
src/cmake/: PrecompiledHeader.cmake
src/core/: CMakeLists.txt  adblock.cpp  adblock.hpp  array.hpp  context.hpp  element_hide_rule_base.cpp  element_hide_rule_base.hpp  file.cpp  file.hpp  filter_list.cpp  filter_list.hpp  filter_rule_base.cpp  filter_rule_base.hpp  filter_set.cpp  filter_set.hpp  json.hpp  json_fwd.hpp  meson.build  snippet_rule_base.cpp  snippet_rule_base.hpp  string_range.hpp  uri.hpp  white_list_query_context.hpp
src/index/: CMakeLists.txt  domain_match_filter_rule_map.cpp  domain_match_filter_rule_map.hpp  domained_element_hide_rule_map.cpp  domained_element_hide_rule_map.hpp  filter_rule_index.cpp  filter_rule_index.hpp  filter_rule_map.hpp  meson.build  prefix_match_filter_rule_map.cpp  prefix_match_filter_rule_map.hpp  statistics.cpp  statistics.hpp  substring_match_filter_rule_map.cpp  substring_match_filter_rule_map.hpp  suffix_match_filter_rule_map.cpp  suffix_match_filter_rule_map.hpp  utility.hpp
src/option/: CMakeLists.txt  csp_option.cpp  csp_option.hpp  do_not_track_option.hpp  document_option.cpp  document_option.hpp  domain_data_base.hpp  domain_option.hpp  elem_hide_option.cpp  elem_hide_option.hpp  font_option.cpp  generic_block_option.hpp  generic_hide_option.cpp  generic_hide_option.hpp  image_option.hpp  invertible_option.cpp  match_case_option.hpp  media_option.cpp  media_option.hpp  object_subrequest_option.cpp  object_subrequest_option.hpp  other_option.hpp  ping_option.hpp  popup_option.cpp  popup_option.hpp  script_option.cpp  script_option.hpp  site_key_option.cpp  site_key_option.hpp  subdocument_option.cpp  subdocument_option.hpp  third_party_option.cpp  third_party_option.hpp  xml_http_request_option.hpp
src/parser/: CMakeLists.txt  domain.cpp  domain.hpp  element_hide_rule.cpp  element_hide_rule.hpp  filter_option.cpp  filter_option.hpp  filter_pattern.hpp  filter_rule.cpp  grammar.cpp  header.hpp  meson.build  parse_error.hpp  parser.cpp  parser.hpp  rule_builder.cpp  rule_builder.hpp  type.hpp  white_list_option.cpp
src/pattern/: CMakeLists.txt  base_match_pattern.cpp  base_match_pattern.hpp  basic_match_pattern.cpp  basic_match_pattern.hpp  domain_match_pattern.cpp  domain_match_pattern.hpp  meson.build  pattern.hpp  regex_pattern.cpp  regex_pattern.hpp
src/rule/: CMakeLists.txt  basic_element_hide_rule.cpp  basic_element_hide_rule.hpp  basic_filter_rule.hpp  comment_rule.cpp  comment_rule.hpp  domain_data_base.cpp  domain_data_base.hpp  element_hide_rule.cpp  element_hide_rule.hpp  exception_element_hide_rule.cpp  exception_element_hide_rule.hpp  exception_filter_rule.hpp  extended_element_hide_rule.cpp  extended_element_hide_rule.hpp  filter_option.cpp  filter_option.hpp  filter_rule.cpp  filter_rule.hpp  meson.build  rule.cpp  rule.hpp  snippet_rule.cpp  snippet_rule.hpp  utility.cpp  utility.hpp
src/rule_set/: CMakeLists.txt  config.hpp  domain_match_filter_rule_set.cpp  domain_match_filter_rule_set.hpp  domained_element_hide_rule_set.cpp  domained_element_hide_rule_set.hpp  filter_rule_set.hpp  prefix_match_filter_rule_set.cpp  prefix_match_filter_rule_set.hpp  substring_match_filter_rule_set.cpp  substring_match_filter_rule_set.hpp  suffix_match_filter_rule_set.cpp  suffix_match_filter_rule_set.hpp  utility.hpp
src/test/: CMakeLists.txt  adblock.cpp  api.cpp  domain_data_base.cpp  filter_set.cpp  misc.cpp  mock_context.hpp
test/: CMakeLists.txt  adblock.cpp  api.c  api.cpp  domain_data_base.cpp  element_hide_rule_base.cpp  filter_file.hpp  filter_rule_base.cpp  filter_set.cpp  meson.build  mock_context.hpp  parse_rule.hpp  prefix_map.cpp  reg_dom.cpp  subscription.cpp
test/api/: CMakeLists.txt  c_api.cpp  database.cpp  meson.build
test/core/: CMakeLists.txt  adblock.cpp  element_hide_rule_base.cpp  filter_list.cpp  filter_rule_base.cpp  filter_set.cpp  meson.build  snippet_rule_base.cpp
test/data/: easylist.txt  elementary.txt  error.txt  fanboy.txt  wrong_version.txt
test/index/: CMakeLists.txt  domain_match_filter_rule_map.cpp  domained_element_hide_rule_map.cpp  meson.build  prefix_match_filter_rule_map.cpp  substring_match_filter_rule_map.cpp  suffix_match_filter_rule_map.cpp
test/option/: CMakeLists.txt  csp.cpp  document.cpp  domain.cpp  elem_hide.cpp  font.cpp  generic_block.cpp  generic_hide.cpp  image.cpp  media.cpp  meson.build  object.cpp  object_sub_request.cpp  other.cpp  ping.cpp  popup.cpp  script.cpp  (+7 more)
(+190 files in other folders)
