add_library(rule
    rule.cpp
    filter_rule.cpp
    element_hide_rule.cpp
    basic_element_hide_rule.cpp
    exception_element_hide_rule.cpp
    extended_element_hide_rule.cpp
    comment_rule.cpp
    filter_option.cpp
    domain_data_base.cpp
    utility.cpp
)
target_link_libraries(rule
    pattern
    uri
    reg_dom
)
